[project]
name = "stop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "uvicorn>=0.42.0",
]
